Bug 410585 - "Open With -> Other..." immediately opens in Dolphin
Summary: "Open With -> Other..." immediately opens in Dolphin
Status: RESOLVED FIXED
Alias: None
Product: kdesvn
Classification: Applications
Component: General (other bugs)
Version First Reported In: 2.1.0
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: KDESvn default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-08-04 19:15 UTC by Alexander Potashev
Modified: 2019-08-09 20:06 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alexander Potashev 2019-08-04 19:15:04 UTC
SUMMARY
"Open With -> Other..." immediately opens in Dolphin.

STEPS TO REPRODUCE
1. Open an SVN working copy.
2. Right-click on a directory in sidebar.
3. Click "Open with..." -> "Other..."

OBSERVED RESULT
The directory is opened in Dolphin.

EXPECTED RESULT
Should open a dialog to select application to open with.

SOFTWARE/OS VERSIONS
Operating System: Fedora 30
KDE Plasma Version: 5.15.5
KDE Frameworks Version: 5.59.0
Qt Version: 5.12.4
Kernel Version: 5.1.17-300.fc30.x86_64
OS Type: 64-bit
Processors: 8 × Intel® Core™ i7-6700HQ CPU @ 2.60GHz
Memory: 15,4 ГиБ

ADDITIONAL INFORMATION
kdesvn 2.1.0 (rev: 263ff5fa)
Comment 1 Christian Ehrlicher 2019-08-09 20:06:48 UTC
Git commit 30830d51ca01b9cc8492367c7e0c5bb2255e5543 by Christian Ehrlicher.
Committed on 09/08/2019 at 19:47.
Pushed by chehrlic into branch 'master'.

Fix opening 'Open with' dialog in context menu

M  +4    -7    src/svnfrontend/opencontextmenu.cpp

https://commits.kde.org/kdesvn/30830d51ca01b9cc8492367c7e0c5bb2255e5543