Fix opening 'Open with' dialog in context menu

BUG: 410585