src/svnfrontend/opencontextmenu.cpp
@@ -23,7 +23,6 @@
 #include <KLocalizedString>
 #include <KRun>
 #include <QAction>
-#include <QApplication>
 
 OpenContextmenu::OpenContextmenu(const QUrl &aPath, const KService::List &aList, QWidget *parent)
     : QMenu(parent)
@@ -48,8 +47,7 @@ void OpenContextmenu::setup()
         _found.append(ptr->name());
         QString actionName(ptr->name().replace(QLatin1Char('&'), QLatin1String("&&")));
         QAction *act = addAction(SmallIcon(ptr->icon()), actionName);
-        QVariant _data = m_mapPopup.size();
-        act->setData(_data);
+        act->setData(m_mapPopup.size());
 
         m_mapPopup.push_back(ptr);
     }
@@ -58,8 +56,7 @@ void OpenContextmenu::setup()
         addSeparator();
     }
     QAction *act = new QAction(i18n("Other..."), this);
-    QVariant _data = int(0);
-    act->setData(_data);
+    act->setData(-1);
     addAction(act);
 }
 
@@ -67,7 +64,7 @@ void OpenContextmenu::slotRunService(QAction *act)
 {
     const int idx = act->data().toInt();
     if (idx >= 0 && idx < m_mapPopup.size()) {
-        KRun::runService(*m_mapPopup.at(idx), QList<QUrl>() << m_Path, QApplication::activeWindow());
+        KRun::runService(*m_mapPopup.at(idx), {m_Path}, parentWidget());
     } else {
         slotOpenWith();
     }
@@ -78,5 +75,5 @@ void OpenContextmenu::slotOpenWith()
 {
     QList<QUrl> lst;
     lst.append(m_Path);
-    KRun::displayOpenWithDialog(lst, QApplication::activeWindow());
+    KRun::displayOpenWithDialog({m_Path}, parentWidget());
 }
